--- a/src/liquid/components/ld-switch/ld-switch.css
+++ b/src/liquid/components/ld-switch/ld-switch.css
@@ -63,6 +63,7 @@
 
 :host fieldset {
   width: 100%;
+  height: 100%;
 }
 
 :host(.ld-switch--sm),
